
Define a scratch disk for vax so that ATF test results can be exported
to the host.

Support Xen pvshim.  From Manuel Bouyer.

- 2.13 releaed -

Install the base32 set by default (when present).

When installing a NetBSD version that has the new "base32" set, don't
mistake it for the "base" set.

- 2.12 released -

Fix incorrect scratch disk device name for riscv-riscv64 causing the
export of test result data to the host to fail.

Support the new manhtml, base32, and debug32 sets.

When installing a NetBSD version that has the new "manhtml" set, don't
mistake it for the "man" set.

- 2.11 released -

Increase the default memory size for sparc to 64M.

On macOS, use the -joliet option to "hdiutil makehybrid" as the -iso
option fails to create a Rock Ridge file system even though the
hdiutil manpage says it will.  From Benny Siegert.

Add initial support for riscv-riscv64.

Increase the default of the --test-timeout option to 3 hours, as the
timeout of the crypto/libcrypto/t_libcrypto:bn test case in the NetBSD
ATF test suite has now been increased to 2 hours, and anita must use a
longer timeout than any individual test case.

New command line --no-entropy.

Support Xen PVH virtualization, enabled by "--xen-type pvh".
From Manuel Bouyer.

New command line --partitioning-scheme, for testing i386 and amd64
with MBR partitioning rather than the default GPT partitioning.

- 2.10 released -

Support the new sysinst root password and entropy configuration user
interface introduced on source date 2022.04.21.17.30.15.

Fix stray quotes in the anita --help output.

When choosing to overwrite a non-NetBSD partition, handle yes/no
choices presented in either order.

Define a scratch disk for macppc (wd1c) so that ATF test results can
be exported to the host.

- 2.9 released -

Support the new "gpufw" set.

Actually reduce the default test timeout to 1 hour as documented in
version 2.5 when anita is invoked as a program rather than as a
library.
